# lyrical

./: Cargo.toml  README.md  TODO.md  flake.nix
src/: cache.rs  lib.rs  lyrics.rs  main.rs  song.rs
src/fetchers/: lrclib.rs  mod.rs
src/modes/: default.rs
