[package]
name = "lyrical"
version = "0.1.3"
edition = "2024"
license = "GPL-3.0-only"
description = "Tool to show the lyrics of the current song."
repository = "https://github.com/tblelrd/lyrical"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.32"
kakasi = "0.1.0"
korean-romanize = "0.1.0"
mandarin-to-pinyin = "0.0.2"
playerctl = "0.1.0"
reqwest = "0.12.23"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = [ "full", "macros" ] }
