[package]
name = "lyrical"
version = "0.3.0"
edition = "2024"
license = "GPL-3.0-only"
description = "CLI Tool to show the lyrics of the current song using playerctl."
repository = "https://github.com/tblelrd/lyrical"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
kakasi = "0.1.0"
korean-romanize = "0.2.0"
mandarin-to-pinyin = "0.0.2"
reqwest = "0.12.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = [ "full", "macros" ] }
